# ronin

./: .gitignore  CMakeLists.txt  GEMINI.md  PROJECT_MANIFEST.md  README.md  RoninBoot_debug.txt  RoninFileSearchNode_LTM_debug.txt  RoninNativeEngine_debug.txt  RoninNeuralEmbedding_debug.txt  Technical_Specifications.md  backlog.md  checkpoint_schema.fbs  file_structure.md  hydration_error.txt  inspect_onnx  inspect_onnx.cpp  project_status.md  ronin_debug.txt
.github/workflows/: build.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/aidl/com/ronin/kernel/: IInferenceService.aidl
android/app/src/main/assets/: capabilities.json
android/app/src/main/kotlin/com/ronin/kernel/: FileSearchNode.kt  InferenceService.kt  MainActivity.kt  MainActivity.kt_bottom.txt  NativeEngine.kt
android/app/src/test/kotlin/com/ronin/kernel/: KernelUITest.kt
android/src/main/kotlin/com/ronin/kernel/: NativeEngine.kt
assets/: capabilities.json  providers.json
build_host/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
conductor/: plan.md
conductor/tracks/hydration/: plan.md
include/: capability_graph.h  checkpoint_engine.h  checkpoint_manager.h  file_search_engine.h  graph_executor.h  graph_storage.h  intent_engine.h  jni_utils.h  long_term_memory.h  lora_engine.h  memory_buffer.hpp  memory_manager.h  ronin_jni.h  ronin_jni_stubs.h  ronin_kernel.h  ronin_kernel.hpp  ronin_log.h  ronin_registry.hpp  ronin_skill_registry.hpp  ronin_types.hpp  thompson_sampler.h
include/capabilities/: base_skill.h  chat_skill.h  file_scanner.h  file_search_node.h  hardware_bridge.h  hardware_nodes.h  neural_embedding_node.h
include/hal/: dsp_core.h  ronin_hal.h  shared_memory_bridge.h
include/litert/lm/: engine.h
include/mediapipe/tasks/cpp/genai/llm_inference/: llm_inference.h
include/models/: inference_engine.h  prompt_factory.h
src/: capability_graph.cpp  checkpoint_engine.cpp  checkpoint_manager.cpp  file_search_engine.cpp  graph_executor.cpp  graph_storage.cpp  intent_engine.cpp  jni_utils.cpp  long_term_memory.cpp  lora_engine.cpp  memory_manager.cpp  ronin_jni.cpp  ronin_kernel.cpp  thompson_sampler.cpp
src/capabilities/: base_skill.h  file_scanner.cpp  file_search_node.cpp  hardware_bridge.cpp  hardware_nodes.cpp  neural_embedding_node.cpp
src/models/: inference_engine.cpp  mediapipe_bridge.cpp
tests/: atomic_integrity_test.cpp  memory_stress_test.cpp  precision_test.cpp  search_capability_test.cpp
